Docs and minor updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
-      - MYSQL_DATABASE=test
+      - MYSQL_DATABASE=testdb
       - MYSQL_USER=root
       - MYSQL_PASSWORD=example
       - PYTHONUNBUFFERED=0
