Initial commit for Redshift

--- a/redshift/example.env
+++ b/redshift/example.env
@@ -3,8 +3,8 @@ MYSQL_PORT=3306
 MYSQL_DATABASE=testdb
 MYSQL_USER=root
 MYSQL_PASSWORD=example
-SNOWFLAKE_ACCOUNT=
-SNOWFLAKE_USER=
-SNOWFLAKE_PASSWORD=
-SNOWFLAKE_WAREHOUSE=
-SNOWFLAKE_DATABASE=
+REDSHIFT_HOST=
+REDSHIFT_PORT=
+REDSHIFT_DATABASE=
+REDSHIFT_USER=
+REDSHIFT_PASSWORD=
