--- a/bigquery/example.env
+++ b/bigquery/example.env
@@ -3,8 +3,5 @@ MYSQL_PORT=3306
 MYSQL_DATABASE=testdb
 MYSQL_USER=root
 MYSQL_PASSWORD=example
-REDSHIFT_HOST=
-REDSHIFT_PORT=
-REDSHIFT_DATABASE=
-REDSHIFT_USER=
-REDSHIFT_PASSWORD=
+PROJECT_ID=
+GOOGLE_APPLICATION_CREDENTIALS=/service_account.json
