Add documentation on replication from RDS and CircleCI stdout image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,9 @@ jobs:
 
      # deploy the image
      - run: docker push servicerocket/mysql2bigquery:latest
+
+     # build the application image
+     - run: docker build -t servicerocket/mysql2stdout:latest .
+
+     # deploy the image
+     - run: docker push servicerocket/mysql2stdout:latest
